[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/PairViewer.gd" type="Script" id=1]
[ext_resource path="res://mukta24.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/pixel_faces/00067.png" type="Texture" id=3]
[ext_resource path="res://mukta48.tres" type="DynamicFont" id=4]
[ext_resource path="res://mukta16.tres" type="DynamicFont" id=5]

[node name="PairViewer" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite1" type="Sprite" parent="."]
position = Vector2( -70, -120 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 70, -120 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="NameAge1" type="Label" parent="."]
margin_left = -136.0
margin_top = -58.0
margin_right = 64.0
margin_bottom = -3.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Leighton, 34"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameAge2" type="Label" parent="."]
margin_left = 4.0
margin_top = -58.0
margin_right = 170.0
margin_bottom = -3.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Leighton, 34"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Similarities" type="Label" parent="."]
margin_left = -134.878
margin_top = -14.0
margin_right = 135.0
margin_bottom = 0.000404358
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Similarities:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Differences" type="Label" parent="."]
margin_left = -135.82
margin_top = 40.0
margin_right = 135.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Differences:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="None1" type="Label" parent="."]
visible = false
margin_left = -135.82
margin_top = 14.0
margin_right = 135.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "None"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="None2" type="Label" parent="."]
visible = false
margin_left = -135.82
margin_top = 68.0
margin_right = 135.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "None"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Compatibility" type="Label" parent="."]
margin_left = -100.471
margin_top = 85.0276
margin_right = 99.5294
margin_bottom = 140.028
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Compatibility:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CompatibilityValue" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -138.0
margin_top = 112.618
margin_right = 138.0
margin_bottom = 198.618
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "HIGH"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SimilarityContainer" type="Node2D" parent="."]

[node name="DifferenceContainer" type="Node2D" parent="."]

[node name="DifferenceContainer2" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
margin_left = -144.0
margin_top = -192.0
margin_right = 144.0
margin_bottom = 192.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
